Overflow fix on Tools

--- a/website-assets/scss/tools.scss
+++ b/website-assets/scss/tools.scss
@@ -51,6 +51,7 @@
 	flex-direction: column;
 	cursor: pointer;
 	padding: 4px;
+	padding-bottom: 0px;
 	img {
 		max-height: calc(100% - 24px);
 		max-width: calc(100% - 24px);
